--- a/amplify.yml
+++ b/amplify.yml
@@ -10,12 +10,12 @@ frontend:
       commands:
         - echo "Setting up backend application with Amplify..."
         - echo "Using amplify-app.js as main entry point"
-        - echo "No frontend build needed for backend-only app"
-        - echo "Skipping database migrations during build (will run on startup)"
         - echo "Backend build completed"
         - echo "Build phase completed successfully"
         - echo "Application ready for deployment"
-        - echo "Starting application with npm start"
+        - echo "Starting backend application..."
+        - npm start &
+        - echo "Backend application started in background"
   artifacts:
     baseDirectory: /
     files:
