--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "knex": "^3.1.0",
     "mysql2": "^3.14.1",
     "node-forge": "^1.3.1",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "typescript": "^4.9.5"
   }
 }
