--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "knex": "^3.1.0",
     "mysql2": "^3.14.1",
     "node-forge": "^1.3.1",
-    "nodemon": "^3.1.10",
-    "typescript": "^4.9.5"
+    "nodemon": "^3.1.10"
   }
 }
