--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "node server.mjs",
     "start:with-migrations": "npm run migrate && npm start",
+    "start:with-setup": "npm run migrate && npm run seed && npm start",
     "dev": "nodemon server.mjs",
     "build": "echo 'Backend build completed - no compilation needed'",
     "migrate": "knex migrate:latest --knexfile knexfile.cjs",
