--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "delivery-backend",
   "version": "1.0.0",
   "description": "To make it easy for you to get started with GitLab, here's a list of recommended next steps.",
-  "main": "server.mjs",
+  "main": "index.mjs",
   "type": "module",
   "scripts": {
     "start": "node server.mjs",
