--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node server.mjs",
     "dev": "nodemon server.mjs",
     "build": "echo 'Backend build completed - no compilation needed'",
+    "vercel-build": "npm run build",
     "migrate": "knex migrate:latest --knexfile knexfile.cjs",
     "seed": "knex seed:run --knexfile knexfile.cjs",
     "deploy": "npm start"
@@ -32,6 +33,8 @@
     "knex": "^3.1.0",
     "mysql2": "^3.14.1",
     "node-forge": "^1.3.1",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "@supabase/supabase-js": "^2.39.0",
+    "pg": "^8.11.3"
   }
 }
